--- a/ChrisBlog_v2/src/main/webapp/styles/shCore.css
+++ b/ChrisBlog_v2/src/main/webapp/styles/shCore.css
@@ -56,8 +56,12 @@
   width: 100% !important;
   margin: 1em 0 1em 0 !important;
   position: relative !important;
-  overflow: auto !important;
+  overflow: hidden !important;
   font-size: 1em !important;
+  border: thin;
+  border-color: #AFAFAF;
+  border-right-style: solid;
+  border-bottom-style: solid;
 }
 .syntaxhighlighter.source {
   overflow: hidden !important;
