Implementing loging mechanism: adding secured resources checking

--- a/ChrisBlog/src/main/webapp/styles/style.css
+++ b/ChrisBlog/src/main/webapp/styles/style.css
@@ -80,6 +80,8 @@ h1 a, h2 a {
 	text-transform: uppercase;
 	border-radius: .5em;
 	text-decoration: none;
+	cursor:pointer;
+    cursor:hand;
 }
 
 .dialogLink{
