--- a/ChrisBlog/src/main/webapp/styles/style.css
+++ b/ChrisBlog/src/main/webapp/styles/style.css
@@ -579,3 +579,98 @@ div#AdTaily_Widget_Container div.Footer {
 	margin-top: 0px !important;
 	padding-bottom: 0px !important;
 }
+
+
+
+/* Security */
+#secArticleListHeader{
+	border-bottom: 1px;
+	border-bottom-style: solid;
+	margin-top: 50px;
+}
+
+#secArticleListHeader ul{
+	margin-bottom: 0px;
+	margin-left: 0px;
+}
+
+.secArticleListTitle{
+	display: inline-block;
+	border: 1px solid;
+	border-bottom-style: none;
+	border-radius: 3px 3px 0 0;
+	padding: 0 20px 0 20px;
+	background-color: white;
+	margin-bottom: -1px;
+}
+
+#secArticleListActions{
+	border-bottom: 1px;
+	border-bottom-style: solid;
+	padding: 10px 0 10px 0;
+	text-align: right;
+}
+
+#secArticleListActions ul{
+	margin-bottom: 0px;
+	margin-left: 0px;
+}
+
+.secArticleListAction{
+	display: inline-block;
+}
+
+#secArticleListContent ul{
+	margin-bottom: 0px;
+	margin-left: 0px;
+	list-style: none;
+}
+
+.secArticleListContentTable{
+	border-collapse:collapse;
+}
+
+.secArticleListContentTable tr td{
+	border-bottom-color: black;
+	border-bottom-style: solid;
+	border-bottom-width: 1px;
+}
+
+.secArticleListRow{	
+	border-bottom: 1px solid;
+	line-height: 20px;
+	padding: 10px 0 10px 0;
+}
+
+.secArticleListContentTable{
+	width: 100%;
+}
+
+.secArticleListContentColumnPoint{
+	width: 5%;
+	text-align: center;
+}
+
+.secArticleListContentPoint{
+	content: url('../images/common/bullet_blue.png') center no-repeat;
+}
+
+.secArticleListContentColumnCheckbox{
+	width: 10%;
+	text-align: center;
+}
+
+.secArticleListContentTitle{
+	margin-top: 10px;
+	margin-left: 30px;
+	font-size: 25px;
+	font-weight: bold;
+}
+
+.secArticleListContentInfo{
+	font-size: 11px;
+	margin-bottom: 20px;
+	margin-left: 30px;
+}
+
+
