--- a/ChrisBlog/src/main/webapp/styles/style.css
+++ b/ChrisBlog/src/main/webapp/styles/style.css
@@ -584,8 +584,7 @@ div#AdTaily_Widget_Container div.Footer {
 
 /* Security */
 #secArticleListHeader{
-	border-bottom: 1px;
-	border-bottom-style: solid;
+	border-bottom: 1px solid #C9DBEC;
 	margin-top: 50px;
 }
 
@@ -596,17 +595,19 @@ div#AdTaily_Widget_Container div.Footer {
 
 .secArticleListTitle{
 	display: inline-block;
-	border: 1px solid;
+	border: 1px solid #C9DBEC;
 	border-bottom-style: none;
 	border-radius: 3px 3px 0 0;
 	padding: 0 20px 0 20px;
 	background-color: white;
 	margin-bottom: -1px;
+	color: #77A6D2;
+	font-size: 20px;
+	font-weight: bold;
 }
 
 #secArticleListActions{
-	border-bottom: 1px;
-	border-bottom-style: solid;
+	border-bottom: 1px solid #C9DBEC;
 	padding: 10px 0 10px 0;
 	text-align: right;
 }
@@ -618,6 +619,18 @@ div#AdTaily_Widget_Container div.Footer {
 
 .secArticleListAction{
 	display: inline-block;
+	margin-left: 10px;
+}
+
+.secArticleListAction a{
+	color: #4183C4;
+	text-decoration: none;
+	font: Helvetica, arial, freesans, clean, sans-serif;
+	font-size: 16px;
+}
+
+.secArticleListAction a:HOVER{
+	text-decoration: underline;
 }
 
 #secArticleListContent ul{
@@ -631,15 +644,7 @@ div#AdTaily_Widget_Container div.Footer {
 }
 
 .secArticleListContentTable tr td{
-	border-bottom-color: black;
-	border-bottom-style: solid;
-	border-bottom-width: 1px;
-}
-
-.secArticleListRow{	
-	border-bottom: 1px solid;
-	line-height: 20px;
-	padding: 10px 0 10px 0;
+	border-bottom: 1px dotted #C9DBEC;
 }
 
 .secArticleListContentTable{
@@ -663,12 +668,23 @@ div#AdTaily_Widget_Container div.Footer {
 .secArticleListContentTitle{
 	margin-top: 10px;
 	margin-left: 30px;
+}
+
+.secArticleListContentTitle a{
 	font-size: 25px;
 	font-weight: bold;
+	color: #4183C4;
+	text-decoration: none;
+	font: Helvetica, arial, freesans, clean, sans-serif;
+}
+
+.secArticleListContentTitle a:HOVER{
+	text-decoration: underline;
 }
 
 .secArticleListContentInfo{
-	font-size: 11px;
+	font-size: 12px;
+	color: #888;
 	margin-bottom: 20px;
 	margin-left: 30px;
 }
