--- a/ChrisBlog/src/main/webapp/styles/style.css
+++ b/ChrisBlog/src/main/webapp/styles/style.css
@@ -758,3 +758,9 @@ div#AdTaily_Widget_Container div.Footer {
 	background: white;
 	color: #CCC;
 }
+
+.disabledLink{
+	pointer-events: none;
+    cursor: default;
+    color: #CCC !important;
+}
