#8 Implementing entities in db: improvement of updating article

--- a/ChrisBlog/src/main/webapp/styles/style.css
+++ b/ChrisBlog/src/main/webapp/styles/style.css
@@ -743,6 +743,11 @@ div#AdTaily_Widget_Container div.Footer {
 	color: #CCC;
 }
 
+.secPageField input[readonly="readonly"]{
+	background: white;
+	color: #CCC;
+}
+
 .secPageField select{
 	width: 420px;	
 	border: 1px solid #CCC;
