--- a/ChrisBlog/src/main/webapp/styles/style.css
+++ b/ChrisBlog/src/main/webapp/styles/style.css
@@ -244,6 +244,21 @@ h1 a, h2 a {
 .logText{
 	font-size: medium;
 	height: 22px;
+	color: #888;
+	font-weight: bold;
+}
+
+#secResources{
+	color: #888;
+	font-weight: bold;
+}
+
+#login{
+	color: #888;
+}
+
+#password{
+	color: #888;
 }
 
 #main {
