#8 Implementing entities in db: add next button

--- a/ChrisBlog/src/main/webapp/styles/style.css
+++ b/ChrisBlog/src/main/webapp/styles/style.css
@@ -825,6 +825,10 @@ div#AdTaily_Widget_Container div.Footer {
 	margin-top: 20px;
 }
 
+.tmp{
+	margin-left: 60px;
+}
+
 .error{
 	font-weight: bold;
 	font-family: "Capriola",sans-serif;
