#8 Implementing entities in db: remove pages count from display

--- a/ChrisBlog/src/main/webapp/styles/style.css
+++ b/ChrisBlog/src/main/webapp/styles/style.css
@@ -336,6 +336,10 @@ span.metaPagesCount {
 	font-size: 30px;
 }
 
+.navigationButtons{
+	margin-top: 60px;
+}
+
 #rightSpace{
 	float: left;
 	width: 420px;
