--- a/ChrisBlog/src/main/webapp/styles/style.css
+++ b/ChrisBlog/src/main/webapp/styles/style.css
@@ -487,7 +487,7 @@ span.metaPagesCount {
 }
 
 #article h2{
-	margin: 4em 0 1em;
+	margin-top: 40px;
 }	
 
 /*#article h2{		
@@ -519,10 +519,6 @@ span.metaPagesCount {
 	border: 1px solid #bbb;
 	border-radius: 0.5em;
 }*/
-
-#article div.addthis_toolbox + h2{
-	margin: 3em 0 1em;
-}
 
 .aboutMePhoto{
 	text-align: center;	
