--- a/ChrisBlog/src/main/webapp/styles/style.css
+++ b/ChrisBlog/src/main/webapp/styles/style.css
@@ -4,8 +4,10 @@
 }
 
 body {
-	font-family: Georgia, Times, serif;
-	color: #444;
+	font-family: Arial,sans-serif;
+	font-size: 14px;
+	line-height: 1.5;
+	color: #3C3C3C;
 }
 
 a {
