#8 Implementing entities in db: improvement css for tags

--- a/ChrisBlog/src/main/webapp/styles/style.css
+++ b/ChrisBlog/src/main/webapp/styles/style.css
@@ -425,6 +425,8 @@ span.metaPagesCount {
 .rightTagsCloud{
 	color: #888;
 	margin-right: 5px;
+	white-space:nowrap;
+	text-transform:capitalize;
 }
 
 #footer {
