#8 Implementing entities in db: improvement navigation buttons

--- a/ChrisBlog/src/main/webapp/styles/style.css
+++ b/ChrisBlog/src/main/webapp/styles/style.css
@@ -877,3 +877,7 @@ div#AdTaily_Widget_Container div.Footer {
 	margin-right: 150px;
 	border-radius: 1.5em;   	
 }
+
+.back_next_buttons{
+	margin-right: 60px;
+}
